| Summary: | ASTERISK-25438: res_rtp_asterisk: ICE role message even when ICE is not enabled | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-09-30 13:38:34 | Date Closed: | 2015-09-30 14:13:56 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A commit (819760ba) added a log message to ast_rtp_ice_set_role which is output when set_role is called without an ICE instance. In practice this is normal to occur when ICE is not enabled on the RTP instance.
This log message should be reduced to a debug message. | ||
| Comments: | |||